adjust query params

--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
                         var cam = cams[i];
                         var title = cam.title;
                         var preview = cam.image.current.preview;
-                        $("#cams").append("<img src='" + preview + "'></img>")
+                        $("#cams").append("<img src='" + preview + "' title='" + title + "'></img>")
                     }
                 }            
             })
