--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
     <style>
     #map {
         width: 100%;
-        height: 400px;
+        height: 100%;
         background-color: grey;
     }
     </style>
@@ -42,9 +42,9 @@
                             var cam = cams[i];
                             var title = cam.title;
                             var preview = cam.image.current.preview;
-                            $("#cams").append("<img src='" + preview + "' title='" + title + "'></img>")
+                            //$("#cams").append("<img src='" + preview + "' title='" + title + "'></img>")
 
-                            geomap.addMarker(cam.location.latitude, cam.location.longitude);
+                            geomap.addMarker(cam.location.latitude, cam.location.longitude, cam.image.current.preview, cam.title);
                         }
                     }            
                 });
