search center button

--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,9 @@
     <div id="searchDiv">
         <input id="searchAddress" type="text" class="form-control" placeholder="Enter Search Address" />
     </div>
+    <div id="researchDiv">
+        <input id="searchHereButton" type="button" class="form-control" value="Click to Refresh Here" />
+    </div>
     <div id="map">
 
     </div>
